made the howManuToShow in sort page up to 14 | fix the pageTravel in sortPage | made the sort page separate than basicPage to make it wrap to 2 column | fix monthlyBesteset for gaming which was taking data from physiology

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1444,22 +1444,51 @@ footer__copyRight > h5 > a:hover, .footer__copyRight > h5 > a:hover {
   opacity: 1;
 }
 
-.newest-mostViews__item {
-  margin: auto;
-  max-width: 22rem;
-  padding-top: 1.125rem;
-}
-
 @media (max-width: 49.9375em) {
-  .newest-mostViews__item {
-    max-width: 90%;
+  .sortMore {
+    margin: 0;
+    -webkit-transform: inherit;
+            transform: inherit;
   }
 }
 
-.newest-mostViews__item::after {
+.sortMore__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap-reverse;
+      flex-wrap: wrap-reverse;
+  height: 20rem;
+}
+
+@media (max-width: 49.9375em) {
+  .sortMore__container {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    height: inherit;
+  }
+}
+
+.sortMore__item {
+  padding-top: 1.125rem;
+  padding-left: 1.125rem;
+}
+
+@media (max-width: 49.9375em) {
+  .sortMore__item {
+    margin-right: 3rem;
+  }
+}
+
+.sortMore__item::after {
   content: '◾';
   position: relative;
   top: 0.2rem;
+  margin-left: .5rem;
 }
 
 .categoryList {
